Added toga-django Webview widget.

--- a/src/django/toga_django/django/templates/toga/base.html
+++ b/src/django/toga_django/django/templates/toga/base.html
@@ -15,6 +15,10 @@
             body {
                 padding-top: 5rem;
             }
+
+            iframe {
+                width: 100%;
+            }
         </style>
 {% block bytecode %}
 {% endblock %}
