Upgrade to webpack 2.

--- a/src/django/toga_django/django/templates/toga/base.html
+++ b/src/django/toga_django/django/templates/toga/base.html
@@ -1,4 +1,3 @@
-{% load render_bundle from webpack_loader %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -7,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-        {% render_bundle 'main' %}
+        <script src="/static/main.js"></script>
 
         <title>{% block title %}{{ app.main_window.title }}{% endblock %}</title>
 
