Added handling for Label widgets and rendering styles.

--- a/src/django/toga_django/django/templates/toga/base.html
+++ b/src/django/toga_django/django/templates/toga/base.html
@@ -15,7 +15,7 @@
                 padding-top: 5rem;
             }
 
-            iframe {
+            iframe.toga.WebView {
                 width: 100%;
             }
         </style>
