--- a/src/django/toga_django/django/templates/toga/base.html
+++ b/src/django/toga_django/django/templates/toga/base.html
@@ -28,7 +28,9 @@
         data-toga-app-id="{{ app.app_id }}"
         data-toga-ports="{{ app.ports }}"
         class="app">
+        <div class="container">
 {% block content %}
 {% endblock %}
+        </div>
     </body>
 </head>
