Corrected display of label widths on Django backend.

--- a/src/django/toga_django/django/templates/toga/base.html
+++ b/src/django/toga_django/django/templates/toga/base.html
@@ -18,6 +18,14 @@
             iframe.toga.WebView {
                 width: 100%;
             }
+
+            span.toga.Label {
+                display: inline-block;
+            }
+
+            input.toga.TextInput {
+            }
+
         </style>
 {% block bytecode %}
 {% endblock %}
